chore: fix typos
